--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -15,7 +15,7 @@
 <%= javascript_include_tag :defaults %>
 
 <a href="#" onclick="Effect.toggle('toggle_search', 'appear'); return false;">
-  <%= t('common-actions.show-hide') %></a>
+  <%= t('common_actions.show_hide') %></a>
 <div id='toggle_search' style='border: solid 1px #eee;'  >
   <table>
     <% form_tag :action => 'search' do %>
