--- a/app/views/computers/index.html.erb
+++ b/app/views/computers/index.html.erb
@@ -1,5 +1,5 @@
 <% content_tag :div, :id => 'right-content' do %>
-  <%= link_to t('common-actions.download-all'), :controller => 'computers', :action => 'xls_computers' %>
+  <%= link_to t('common_actions.download_all'), :controller => 'computers', :action => 'xls_computers' %>
 <% end %>
 
 <%= content_tag('br') %>
