--- a/app/views/screens/index.html.erb
+++ b/app/views/screens/index.html.erb
@@ -1,5 +1,5 @@
 <div id='right-content' >
-  <%= link_to t('common-actions.download-all'), :controller => 'screens', :action => 'xls_screens' %>
+  <%= link_to t('common_actions.download_all'), :controller => 'screens', :action => 'xls_screens' %>
 </div>
 
 <%= render :partial => 'list' %>
