--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,16 +1,16 @@
 <table>
   <tr>
-    <th><%= t('menu.users-list') %></th>
-    <th><%= t('menu.users-admin?') %></th>
-    <th colspan='2'><%= t('common-actions.actions') %></th>
+    <th><%= t('menu.users_list') %></th>
+    <th><%= t('menu.users_admin?') %></th>
+    <th colspan='2'><%= t('common_actions.actions') %></th>
   </tr>
 <% for user in @users %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= user.login %></td>
     <td><%= check(user.is_admin) %></td>
-    <td><%= link_to t('common-actions.edit'), edit_user_path(user) %></td>
+    <td><%= link_to t('common_actions.edit'), edit_user_path(user) %></td>
     <% if is_admin?  && user.login != 'admin'  %>
-    <td><%= link_to t('common-actions.destroy'), user, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common_actions.destroy'), user, :confirm => 'Are you sure?', :method => :delete %></td>
     <% end %>
   </tr>
 <% end %>
