--- a/app/views/workstations/index.html.erb
+++ b/app/views/workstations/index.html.erb
@@ -1,5 +1,5 @@
 <div id='right-content' >
-  <%= link_to t('common-actions.download'), :controller => 'workstations',
+  <%= link_to t('common_actions.download'), :controller => 'workstations',
   :action => 'xls_workstations' %>
 </div>
 
