--- a/app/views/cds/_list.html.erb
+++ b/app/views/cds/_list.html.erb
@@ -6,7 +6,7 @@
   <%= content_tag('th', t('cds.burn')) %>
   <%= content_tag('th', 'Pc') %>
   <%= content_tag('th', t('cds.bill')) %>
-  <th colspan='3'><%= t('common-actions.actions') %></th>
+  <th colspan='3'><%= t('common_actions.actions') %></th>
   <% end -%>
 <% for cd in @cds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -16,9 +16,9 @@
     <%= content_tag('td', check(cd.writable)) %>
     <%= content_tag('td', link_to(cd.computer.name , 'computers/' + cd.computer.id.to_s))  rescue nil %>
     <%= content_tag('td', link_to(t('cds.bill'), '/bills/'+ cd.bill_id.to_s)) %>
-    <%= content_tag('td', link_to(t('common-actions.show'), cd )) %>
-    <%= content_tag('td', link_to(t('common-actions.edit'), edit_cd_path(cd))) %>
-    <%= content_tag('td', link_to(t('common-actions.destroy'), cd, :confirm => 'Are you sure?', :method => :delete)) %>
+    <%= content_tag('td', link_to(t('common_actions.show'), cd )) %>
+    <%= content_tag('td', link_to(t('common_actions.edit'), edit_cd_path(cd))) %>
+    <%= content_tag('td', link_to(t('common_actions.destroy'), cd, :confirm => 'Are you sure?', :method => :delete)) %>
   </tr>
 <% end %>
 <% end -%>
