--- a/app/views/computers/_list.html.erb
+++ b/app/views/computers/_list.html.erb
@@ -12,7 +12,7 @@
     <%= content_tag('th', t('computers.workstation?')) %>
     <%= content_tag('th', t('computers.inventory_register')) %>
     <%= content_tag('th', t('computers.bill')) %>
-    <th colspan='3'><%= t 'common-actions.actions' %></th>
+    <th colspan='3'><%= t 'common_actions.actions' %></th>
   <% end %>
   <% for computer in @computers %>
     <tr  class="<%= cycle("rowA","rowB") %>">
@@ -28,9 +28,9 @@
       <%= content_tag('td', in_workstation?(computer, 'computer_id' )) %>
       <%= content_tag('td', computer.inventory_register) %>
       <%= content_tag('td', link_to(t('computers.bill'), '/bills/'+ computer.bill_id.to_s)) %>
-      <%= content_tag('td', link_to(t('common-actions.show') , computer)) %>
-      <%= content_tag('td', link_to(t('common-actions.edit') , edit_computer_path(computer))) %>
-      <%= content_tag('td', link_to(t('common-actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete)) %>
+      <%= content_tag('td', link_to(t('common_actions.show') , computer)) %>
+      <%= content_tag('td', link_to(t('common_actions.edit') , edit_computer_path(computer))) %>
+      <%= content_tag('td', link_to(t('common_actions.destroy') , computer, :confirm => 'Are you sure?', :method => :delete)) %>
     </tr>
   <% end %>
 <% end %>
