--- a/app/views/dvds/_list.html.erb
+++ b/app/views/dvds/_list.html.erb
@@ -6,7 +6,7 @@
     <%= content_tag('th', t('dvds.burn')) %>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', t('dvds.bill')) %>
-    <th colspan='3'><%= t('common-actions.actions') %></th>
+    <th colspan='3'><%= t('common_actions.actions') %></th>
     <% end -%>
 <% for dvd in @dvds %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -16,9 +16,9 @@
     <%= content_tag('td', check(dvd.writable) ) %>
     <%= content_tag('td', link_to(dvd.computer.name , 'computers/' + dvd.computer.id.to_s))  rescue nil %>
     <%= content_tag('td', link_to(t('computers.bill'), '/bills/'+ dvd.bill_id.to_s)) %>
-    <%= content_tag('td', link_to(t('common-actions.show'), dvd )) %>
-    <%= content_tag('td', link_to(t('common-actions.edit'), edit_dvd_path(dvd))) %>
-    <%= content_tag('td', link_to(t('common-actions.destroy'), dvd, :confirm => 'Are you sure?', :method => :delete )) %>
+    <%= content_tag('td', link_to(t('common_actions.show'), dvd )) %>
+    <%= content_tag('td', link_to(t('common_actions.edit'), edit_dvd_path(dvd))) %>
+    <%= content_tag('td', link_to(t('common_actions.destroy'), dvd, :confirm => 'Are you sure?', :method => :delete )) %>
   </tr>
 <% end %>
 <% end -%>
