--- a/app/views/marks/_list.html.erb
+++ b/app/views/marks/_list.html.erb
@@ -1,14 +1,14 @@
 <table>
   <tr>
     <th><%= t('marks.mark') %></th>
-    <th colspan='3' width='100px'><%= t('common-actions.actions') %></th>
+    <th colspan='3' width='100px'><%= t('common_actions.actions') %></th>
   </tr>
 <% for mark in @marks %>
   <tr  class="<%= cycle("rowA","rowB") %>">
     <td><%= mark.name %></td>
-    <td><%= link_to t('common-actions.show'), mark %></td>
-    <td><%= link_to t('common-actions.edit'), edit_mark_path(mark) %></td>
-    <td><%= link_to t('common-actions.destroy'), mark, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to t('common_actions.show'), mark %></td>
+    <td><%= link_to t('common_actions.edit'), edit_mark_path(mark) %></td>
+    <td><%= link_to t('common_actions.destroy'), mark, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
