--- a/app/views/memories/_list.html.erb
+++ b/app/views/memories/_list.html.erb
@@ -6,7 +6,7 @@
     <th colspan='2'><%= t('memories.size') %></th>
     <%= content_tag('th', 'Pc') %>
     <%= content_tag('th', t('memories.bill')) %>
-    <th colspan='3'><%= t('common-actions.actions') %></th>
+    <th colspan='3'><%= t('common_actions.actions') %></th>
   <% end -%>
 <% for memory in @memories %>
   <tr  class="<%= cycle("rowA","rowB") %>">
@@ -17,9 +17,9 @@
     <%= content_tag('td', memory.unit.to_s) rescue nil  %>
     <%= content_tag('td', link_to(memory.computer.name , 'computers/' + memory.computer.id.to_s))  rescue nil%>
     <%= content_tag('td', link_to(t('memories.bill'), '/bills/'+ memory.bill_id.to_s)) %>
-    <%= content_tag('td', link_to(t('common-actions.show'), memory)) %>
-    <%= content_tag('td', link_to(t('common-actions.edit'), edit_memory_path(memory))) %>
-    <%= content_tag('td', link_to(t('common-actions.destroy'), memory, :confirm => 'Are you sure?', :method => :delete)) %>
+    <%= content_tag('td', link_to(t('common_actions.show'), memory)) %>
+    <%= content_tag('td', link_to(t('common_actions.edit'), edit_memory_path(memory))) %>
+    <%= content_tag('td', link_to(t('common_actions.destroy'), memory, :confirm => 'Are you sure?', :method => :delete)) %>
   </tr>
 <% end %>
 <% end -%>
