--- a/app/views/mother_boards/_list.html.erb
+++ b/app/views/mother_boards/_list.html.erb
@@ -5,7 +5,7 @@
     <%= content_tag('th',t('motherboards.mark')) %>
     <%= content_tag('th','Pc') %>
     <%= content_tag('th', t('motherboards.bill')) %>
-    <th colspan='3'><%= t('common-actions.actions') %></th>
+    <th colspan='3'><%= t('common_actions.actions') %></th>
    <% end -%>
 
    <% for mother_board in @mother_boards %>
@@ -15,9 +15,9 @@
        <%= content_tag('td',mother_board.mark.name) rescue nil  %>
        <%= content_tag('td',link_to(mother_board.computer.name , 'computers/' + mother_board.computer.id.to_s))  rescue nil%>
        <%= content_tag('td', link_to(t('motherboards.bill'), '/bills/'+ mother_board.bill_id.to_s)) %>
-       <%= content_tag('td', link_to(t('common-actions.show'), mother_board)) %>
-       <%= content_tag('td', link_to(t('common-actions.edit'), edit_mother_board_path(mother_board))) %>
-       <%= content_tag('td', link_to(link_to t('common-actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete)) %>
+       <%= content_tag('td', link_to(t('common_actions.show'), mother_board)) %>
+       <%= content_tag('td', link_to(t('common_actions.edit'), edit_mother_board_path(mother_board))) %>
+       <%= content_tag('td', link_to(link_to t('common_actions.destroy'), mother_board, :confirm => 'Are you sure?', :method => :delete)) %>
      </tr>
    <% end %>
 <% end -%>
