- Partials and views   * fixed tranlation problems

--- a/app/views/cds/_form.html.erb
+++ b/app/views/cds/_form.html.erb
@@ -44,9 +44,9 @@ Not burn<%= radio_button('cd', 'writable', 'f') %>
 </div >
 <p>
   <% if action_name == 'new' %>
-  <%= f.submit t('common-actions.create') %>
+  <%= f.submit t('common_actions.create') %>
   <% else %>
-  <%= f.submit t('common-actions.edit')  %>
+  <%= f.submit t('common_actions.edit')  %>
   <% end %>
 </p>
 <% end %>
