--- a/app/views/mother_boards/_form.html.erb
+++ b/app/views/mother_boards/_form.html.erb
@@ -49,9 +49,9 @@
   <p>
 
     <% if action_name == 'new' %>
-    <%= f.submit t('common-actions.create') %>
+    <%= f.submit t('common_actions.create') %>
     <% else %>
-    <%= f.submit t('common-actions.edit') %>
+    <%= f.submit t('common_actions.edit') %>
     <% end %>
 
   </p>
