--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,7 +10,7 @@
     <%= f.text_field :email %></p>
     <p><label for="password"><%= t('user.password') %></label><br/>
     <%= f.password_field :password %></p>
-    <p><label for="password_confirmation"><%= t('user.confirm-password') %></label><br/>
+    <p><label for="password_confirmation"><%= t('user.confirm_password') %></label><br/>
     <%= f.password_field :password_confirmation %></p>
     <div id='quarter'>
       <%= label_tag 'language', t('user.language') %><br/>
