--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -65,9 +65,9 @@ Mark:
 
 <p>
   <% if action_name == 'new' %>
-  <%= f.submit "Create" %>
+  <%= f.submit t('common_actions.create') %>
   <% else %>
-  <%= f.submit "Edit" %>
+  <%= f.submit t('common_actions.edit') %>
   <% end %>
 </p>
 <% end %>
