--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,7 +15,7 @@
   <p><%= label_tag 'password', t('user.password') %><br/>
   <%= f.password_field :password %></p>
 
-  <p><%= label_tag 'password_confirmation', t('user.confirm-password') %><br/>
+  <p><%= label_tag 'password_confirmation', t('user.confirm_password') %><br/>
   <%= f.password_field :password_confirmation %></p>
 
   <div id='quarter'>
