- Partials and views   * adapted translations
- Locales
  * added new translations

--- a/app/views/bills/show.html.erb
+++ b/app/views/bills/show.html.erb
@@ -28,4 +28,4 @@
 
 
 <%= link_to t('bill.edit'), edit_bill_path(@bill) %> |
-<%= link_to t('bill.back'), bills_path %>
+<%= link_to t('common_actions.back'), bills_path %>
