--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,4 @@
 
 <%= render :partial => 'form' %>
 
-<%= link_to t('company.back'), companies_path %>
+<%= link_to t('common_actions.back'), companies_path %>
