--- a/app/views/harddisks/new.html.erb
+++ b/app/views/harddisks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New harddisk</h1>
+<h3>New harddisk</h3>
 
 <%= render :partial => 'form' %>
 
-<%= link_to 'Back', harddisks_path %>
+<%= link_to t('common_actions.back'), harddisks_path %>
