--- a/app/views/harddisks/show.html.erb
+++ b/app/views/harddisks/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_harddisk_path(@harddisk) %> |
-<%= link_to 'Back', harddisks_path %>
+<%= link_to t('common_actions.edit'), edit_harddisk_path(@harddisk) %> |
+<%= link_to t('common_actions.back'), harddisks_path %>
