- Partials and views   * adapted translation

--- a/app/views/cds/edit.html.erb
+++ b/app/views/cds/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @cd %> |
-<%= link_to 'Back', cds_path %>
+<%= link_to t('common_actions.show'), @cd %> |
+<%= link_to t('common_actions.back'), cds_path %>
