--- a/app/views/dvds/edit.html.erb
+++ b/app/views/dvds/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @dvd %> |
-<%= link_to 'Back', dvds_path %>
+<%= link_to t('common_actions.show'), @dvd %> |
+<%= link_to t('common_actions.back'), dvds_path %>
