--- a/app/views/harddisks/index.html.erb
+++ b/app/views/harddisks/index.html.erb
@@ -3,4 +3,4 @@
 <%= will_paginate @harddisks %>
 <br />
 
-<%= link_to 'New harddisk', new_harddisk_path %>
+<%= link_to t('common_actions.create'), new_harddisk_path %>
