--- a/app/views/memories/index.html.erb
+++ b/app/views/memories/index.html.erb
@@ -3,4 +3,4 @@
 <%= will_paginate @memories %>
 <br />
 
-<%= link_to 'New memory', new_memory_path %>
+<%= link_to t('common_actions.create'), new_memory_path %>
