--- a/app/views/screens/edit.html.erb
+++ b/app/views/screens/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @screen %> |
-<%= link_to 'Back', screens_path %>
+<%= link_to t('common_actions.show'), @screen %> |
+<%= link_to t('common_actions.back'), screens_path %>
