--- a/app/views/cds/show.html.erb
+++ b/app/views/cds/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_cd_path(@cd) %> |
-<%= link_to 'Back', cds_path %>
+<%= link_to t('common_actions.edit'), edit_cd_path(@cd) %> |
+<%= link_to t('common_actions.back'), cds_path %>
