--- a/app/views/dvds/show.html.erb
+++ b/app/views/dvds/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_dvd_path(@dvd) %> |
-<%= link_to 'Back', dvds_path %>
+<%= link_to t('common_actions.edit'), edit_dvd_path(@dvd) %> |
+<%= link_to t('common_actions.back'), dvds_path %>
