--- a/app/views/memories/new.html.erb
+++ b/app/views/memories/new.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial => 'form' %>
 
-<%= link_to t('memories.back'), memories_path %>
+<%= link_to t('common_actions.back'), memories_path %>
