--- a/app/views/memories/show.html.erb
+++ b/app/views/memories/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_memory_path(@memory) %> |
-<%= link_to 'Back', memories_path %>
+<%= link_to t('common_actions.edit'), edit_memory_path(@memory) %> |
+<%= link_to t('common_actions.back'), memories_path %>
