--- a/app/views/printers/edit.html.erb
+++ b/app/views/printers/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to 'Show', @printer %> |
-<%= link_to 'Back', printers_path %>
+<%= link_to t('common_actions.show'), @printer %> |
+<%= link_to t('common_actions.back'), printers_path %>
