--- a/app/views/printers/show.html.erb
+++ b/app/views/printers/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_printer_path(@printer) %> |
-<%= link_to 'Back', printers_path %>
+<%= link_to t('common_actions.edit'), edit_printer_path(@printer) %> |
+<%= link_to t('common_actions.back'), printers_path %>
