--- a/app/views/screens/show.html.erb
+++ b/app/views/screens/show.html.erb
@@ -1,3 +1,3 @@
 
-<%= link_to 'Edit', edit_screen_path(@screen) %> |
-<%= link_to 'Back', screens_path %>
+<%= link_to t('common_actions.edit'), edit_screen_path(@screen) %> |
+<%= link_to t('common_actions.back'), screens_path %>
