- Views   * adapted transaltion

--- a/app/views/places/edit.html.erb
+++ b/app/views/places/edit.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to t('places.show'), @place %> |
-<%= link_to t('places.back'), places_path %>
+<%= link_to t('common_actions.show'), @place %> |
+<%= link_to t('common_actions.back'), places_path %>
