--- a/app/views/places/new.html.erb
+++ b/app/views/places/new.html.erb
@@ -1,3 +1,3 @@
 <%= render :partial => 'form' %>
 
-<%= link_to t('places.back'), places_path %>
+<%= link_to t('common_actions.back'), places_path %>
