--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -23,6 +23,6 @@
 <%= render :partial => 'render_workstations' %>
 
 
-<%= link_to t('places.edit'), edit_place_path(@place) %> |
-<%= link_to t('places.back'), places_path %> |
+<%= link_to t('common_actions.edit'), edit_place_path(@place) %> |
+<%= link_to t('common_actions.back'), places_path %> |
 <a href='#' onclick='effect.ScrollTo('article_top'); return false;'> <%= t('common_actions.top_page') %></a>
