- Views   * adapted to new tranlations

--- a/app/views/workstations/edit.html.erb
+++ b/app/views/workstations/edit.html.erb
@@ -16,5 +16,5 @@
 
 <% end %>
 
-<%= link_to 'Show', @workstation %> |
-<%= link_to 'Back', workstations_path %>
+<%= link_to t('common_actions.show'), @workstation %> |
+<%= link_to t('common_actions.back'), workstations_path %>
