--- a/app/views/workstations/new.html.erb
+++ b/app/views/workstations/new.html.erb
@@ -3,4 +3,4 @@
 <%= observe_field("places", :update => "outer",
 :url => { :controller => 'workstations', :action => :new },
 :with => "'place_id='+value") %>
-<%= link_to t('workstations.back'), workstations_path %>
+<%= link_to t('common_actions.back'), workstations_path %>
