--- a/app/views/workstations/show.html.erb
+++ b/app/views/workstations/show.html.erb
@@ -32,5 +32,5 @@
 <br>
 <% end %>
 
-<%= link_to 'Edit', edit_workstation_path(@workstation) %> |
-<%= link_to 'Back', workstations_path %>
+<%= link_to t('common_actions.edit'), edit_workstation_path(@workstation) %> |
+<%= link_to t('common_actions.back'), workstations_path %>
