--- a/app/views/computers/new.html.erb
+++ b/app/views/computers/new.html.erb
@@ -1,4 +1,4 @@
 <%= render :partial => 'form' %>
 
-<%= link_to t('computers.back'), computers_path %>
+<%= link_to t('common_actions.back'), computers_path %>
 
