- Views   * added new tranlations in advices

--- a/app/views/screens/_form.html.erb
+++ b/app/views/screens/_form.html.erb
@@ -11,8 +11,8 @@
 <!--      You should have received a copy of the GNU General Public License -->
 <!--      along with this program. If not, see <http://www.gnu.org/licenses/>. -->
 
-<%= advice( @screen.is_part_of_a_workstation, t('common-actions.hide-advice'),
-t('help-phrases.in-workstation'))%>
+<%= advice( @screen.is_part_of_a_workstation, t('common_actions.hide_advice'),
+t('help_phrases.in_workstation'))%>
 
 <% form_for(@screen) do |f| %>
   <%= f.error_messages %>
