--- a/app/views/printers/_form.html.erb
+++ b/app/views/printers/_form.html.erb
@@ -11,8 +11,8 @@
 <!--      You should have received a copy of the GNU General Public License -->
 <!--      along with this program. If not, see <http://www.gnu.org/licenses/>. -->
 
-<%= advice( @printer.is_part_of_a_workstation, t('common-actions.hide-advice'),
-    t('help-phrases.in-workstation'))%>
+<%= advice( @printer.is_part_of_a_workstation, t('common_actions.hide_advice'),
+    t('help_phrases.in_workstation'))%>
 
 <% form_for(@printer) do |f| %>
 <%= f.error_messages %>
