--- a/app/views/workstations/edit.html.erb
+++ b/app/views/workstations/edit.html.erb
@@ -1,5 +1,6 @@
 <% form_for(@workstation) do |f| %>
 <%= f.error_messages %>
+ <h3> <%= t('menu.change_place') %> </h3>
 <div id='quarter' >
   <%= t('phrases.list_of') + t('menu.places') %>
   <%= collection_select(:workstation, :place_id, Place.find(:all, :order => 'title'), :id, :title,{},
