- Controllers   * changed some translates paths
- Views
  * changed some translates paths

--- a/app/views/computers/edit.html.erb
+++ b/app/views/computers/edit.html.erb
@@ -6,5 +6,5 @@
 
 <%= render :partial => 'form' %>
 
-<%= link_to t('computers.show'), @computer %> |
-<%= link_to t('computers.back'), computers_path %>
+<%= link_to t('common_actions.show'), @computer %> |
+<%= link_to t('common_actions.back'), computers_path %>
