--- a/app/views/computers/show.html.erb
+++ b/app/views/computers/show.html.erb
@@ -1,5 +1,5 @@
 <% content_tag :div, :id => 'right-content' do %>
-  <%= link_to  t('common-actions.download-pdf'),
+  <%= link_to  t('common_actions.download_pdf'),
       :controller => 'computers',
   :action => 'pdf', :id => params[:id] %>
 <% end %>
