- Partial and views   * added new partial for details of workstations   * called new partial in edit and show views

--- a/app/views/workstations/edit.html.erb
+++ b/app/views/workstations/edit.html.erb
@@ -1,3 +1,9 @@
+<%= render :partial => 'detailed_info_of_workstation' %>
+
+<% 2.times do %>
+<br>
+<% end %>
+
 <% form_for(@workstation) do |f| %>
 <%= f.error_messages %>
  <h3> <%= t('menu.change_place') %> </h3>
