--- a/app/views/workstations/show.html.erb
+++ b/app/views/workstations/show.html.erb
@@ -1,31 +1,5 @@
 
-<%= show_info(t('workstations.place'), 'principal-device', 'Place', @workstation.place_id, 'title') %>
-
-<!-- Computer info -->
-<%= show_info(t('workstations.computer'), 'principal-device', 'Computer', @workstation.computer_id, 'name') %>
-
-<%= show_info('Ip', 'data-principal-device', 'Computer', @workstation.computer_id, 'ip') %>
-
-<%= show_info('Mac', 'data-principal-device', 'Computer', @workstation.computer_id, 'mac') %>
-
-
-<% 2.times do %>
-<br>
-<% end %>
-
-<!-- Screen info -->
-<%= show_info(t('workstations.screen'), 'principal-device', 'Screen', @workstation.screen_id, 'model')%>
-
-<%= show_info('Sn', 'data-principal-device', 'Screen', @workstation.screen_id, 'serialnumber') %>
-
-<% 2.times do %>
-<br>
-<% end %>
-
-<!-- Printer info -->
-<%= show_info(t('workstations.printer'), 'principal-device', 'Printer', @workstation.printer_id, 'model')  rescue nil %>
-
-<%= show_info('Sn', 'data-principal-device', 'Printer', @workstation.printer_id, 'serialnumber')  rescue nil %>
+<%= render :partial => 'detailed_info_of_workstation' %>
 
 
 <% 2.times do %>
