- Vendor   * added new plugin OpenFlashChart  Version 2.0.0
- Controllers
  * adapted controllers of places and computers to show the chart
    generated by flash plugin

- Views
  * addapted to the new chart flash plugin shows

- Locales
  * fixed stats paragraph

--- a/app/views/computers/stats.html.erb
+++ b/app/views/computers/stats.html.erb
@@ -16,10 +16,13 @@
     <%= @unavailables_computers.count %>
   <% end %>
 
-
-<%  @value = GoogleChart.pie_3d_530x200(@chart).to_url %>
-<%= image_tag(@value)  rescue nil %>
-
 <% end %>
 
+
+<a href="#" onclick="Effect.toggle('toggle_appear_pie_3d_graph', 'appear'); return false;">
+  <%= t('common_actions.show_hide') %></a>
+<div id='toggle_appear_pie_3d_graph' style='border: solid 1px #eee;' >
+<%= javascript_include_tag('swfobject') %>
+<%= @graph %>
+</div>
 
