--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag 'scaffold' %>
   <%= stylesheet_link_tag 'default' %>
 
+  <%= javascript_include_tag('swfobject') %>
   <%= javascript_include_tag('prototype') %>
   <%= javascript_include_tag('scriptaculous/src/scriptaculous') %>
 </head>
