--- a/app/views/workstations/_small_resume_of_stats.html.erb
+++ b/app/views/workstations/_small_resume_of_stats.html.erb
@@ -1,7 +1,7 @@
 <!-- small resume of stats -->
 <div id='left-right' >
   <a href="#" onclick="Effect.toggle('small_stats', 'appear'); return false;">
-    <%= t('common-actions.show-hide') %></a>
+    <%= t('common_actions.show_hide') %></a>
 </div>
 
 <div id='small_stats'>
