--- a/app/views/workstations/_stats.html.erb
+++ b/app/views/workstations/_stats.html.erb
@@ -33,9 +33,9 @@
 <!-- ###################### -->
 <!-- list hardware of stats -->
 <a href="#" onclick="Effect.toggle('list_workstations', 'appear'); return false;">
-  <%= t('common-actions.show-hide') %></a>
+  <%= t('common_actions.show_hide') %></a>
 |
-<%= link_to t('common-actions.download'), :controller => 'workstations', :action => 'xls_workstations',
+<%= link_to t('common_actions.download'), :controller => 'workstations', :action => 'xls_workstations',
 :id => params[:place_id]  %>
 
 <div id='list_workstations'>
