--- a/app/views/computers/_search.html.erb
+++ b/app/views/computers/_search.html.erb
@@ -16,29 +16,29 @@
 
 <a href="#" onclick="Effect.toggle('toggle_search', 'appear'); return false;">
   <%= t('common_actions.show_hide') %></a>
-<div id='toggle_search' style='border: solid 1px #eee;'  >
-  <table>
-    <% form_tag :action => 'search' do %>
-    <tr>
-      <td><label><%= t 'computers.name' %></label></td>
-      <td><%= text_field_with_auto_complete :computer, :name, {:size => 20}, {:method => :get} %></td>
-      <td><%= submit_tag t 'search.label' %></td>
-      <% end %>
-    </tr>
-    <tr>
-      <% form_tag :action => 'search' do %>
-      <td><label>Ip:</label></td>
-      <td><%= text_field_with_auto_complete :computer, :ip, {:size => 20}, {:method => :get} %></td>
-      <td><%= submit_tag t 'search.label' %></td>
-      <% end %>
-    </tr>
-    <tr>
-      <% form_tag :action => 'search' do %>
-      <td><label>Mac:</label></td>
-      <td><%= text_field_with_auto_complete :computer, :mac, {:size => 20}, {:method => :get} %></td>
-      <td><%= submit_tag t 'search.label' %></td>
-    </tr>
-    <% end %>
-  </table>
-</div>
+ <% content_tag :div, :id => 'toggle_search' do %>
+   <% content_tag :table do %>
+     <% form_tag :action => 'search' do %>
+       <% content_tag :tr do %>
+         <%= content_tag('td', t('computers.name')) %>
+         <%= content_tag('td',text_field_with_auto_complete(:computer, :name, {:size => 20}, {:method => :get})) %>
+         <%= content_tag('td', submit_tag(t('search.label'))) %>
+       <% end %>
+     <% end %>
+     <% content_tag :tr do %>
+       <% form_tag :action => 'search' do %>
+         <%= content_tag('td', 'Ip:') %>
+         <%= content_tag('td',text_field_with_auto_complete(:computer, :ip, {:size => 20}, {:method => :get})) %>
+         <%= content_tag('td', submit_tag(t('search.label'))) %>
+       <% end %>
+     <% end %>
+       <% content_tag :tr do %>
+         <% form_tag :action => 'search' do %>
+           <%= content_tag('td', 'Mac:') %>
+           <%= content_tag('td',text_field_with_auto_complete(:computer, :mac, {:size => 20}, {:method => :get})) %>
+           <%= content_tag('td', submit_tag(t('search.label'))) %>
+         <% end %>
+       <% end %>
+   <% end %>
+  <% end %>
 <% end %>
